--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="sitezinhos">
         <section id="sites">
             <div id="aplicativos">
-                 <div id="Brasil" class="app">
-                </div>
+                 <a href="https://vitinhoulti.github.io/Brasil-Clicker/"><div id="Brasil" class="app">
+                </div></a>
                 <div class="appf">
                     <p>Nome: </p>
                     <p id="nomebra" class="nome">Brasil Clicker</p>
@@ -25,15 +25,15 @@
                 </div>
                     
                 
-                <div id="Elson" class="app">
-                </div>
+                <a href="https://vitinhoulti.github.io/Elson-Run/"><div id="Elson" class="app">
+                </div></a>
                 <div class="appf">
                     <p>Nome: </p>
                     <p id="nomeels" class="nome">Elson Run</p>
                     <p>URL:<a href="https://vitinhoulti.github.io/Elson-Run/">https://vitinhoulti.github.io/Elson-Run/</a></p>
                 </div>
-                <div id="calc" class="app">
-                </div>
+                <a href="https://vitinhoulti.github.io/Calculadora-2.0.1/"><div id="calc" class="app">
+                </div></a>
                 <div class="appf">
                     <p>Nome:</p>
                     <p id="nomecal" class="nome">Calculadora-2</p>
