barra de pesquisa funcional

--- a/index.html
+++ b/index.html
@@ -15,28 +15,31 @@
     <section id="plus"></section>
     <div id="sitezinhos">
         <section id="sites">
+            <div id="pesquisa">
+                <input type="text" name="pes" id="ipes">
+                <input type="button" value="Pesquise" onclick="apert()">
+            </div>
             <div id="aplicativos">
-                 <a href="https://vitinhoulti.github.io/Brasil-Clicker/"><div id="Brasil" class="app">
-                </div></a>
+                    <a href="https://vitinhoulti.github.io/Brasil-Clicker/"><div id="Brasil" class="app">Brasil Clicker
+                    </div></a>
                 <div class="appf">
                     <p>Nome: </p>
                     <p id="nomebra" class="nome">Brasil Clicker</p>
                     <p>URL:<a href="https://vitinhoulti.github.io/Brasil-Clicker/">https://vitinhoulti.github.io/Brasil-Clicker/</a></p>
                 </div>
                     
-                
-                <a href="https://vitinhoulti.github.io/Elson-Run/"><div id="Elson" class="app">
+                <a href="https://vitinhoulti.github.io/Elson-Run/"><div id="Elson" class="app">elson Run
                 </div></a>
                 <div class="appf">
                     <p>Nome: </p>
                     <p id="nomeels" class="nome">Elson Run</p>
                     <p>URL:<a href="https://vitinhoulti.github.io/Elson-Run/">https://vitinhoulti.github.io/Elson-Run/</a></p>
                 </div>
-                <a href="https://vitinhoulti.github.io/Calculadora-2.0.1/"><div id="calc" class="app">
+                <a href="https://vitinhoulti.github.io/Calculadora-2.0.1/"><div id="calc" class="app">Calculadora-2
                 </div></a>
                 <div class="appf">
                     <p>Nome:</p>
-                    <p id="nomecal" class="nome">Calculadora-2</p>
+                    <p id="nomecal" class="nomeapp">Calculadora-2</p>
                     <p>URL:<a href="https://vitinhoulti.github.io/Calculadora-2.0.1/">https://vitinhoulti.github.io/Calculadora-2.0.1/</a></p>
                 </div>
             </div>
